--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   ],
   "devDependencies": {
     "coffee-script": "~1.9.1",
+
+    "gulp": "~3.8.6",
+    "gulp-rename": "~1.2.0",
+    "gulp-coffee": "~2.0.0",
+    "gulp-uglify": "~0.2.1",
+
     "karma": "~0.12.31",
     "karma-mocha": "~0.1.0",
     "karma-chai": "~0.1.0",
